# Egyptian

./: .gitignore  .readthedocs.yaml  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
docs/: conf.py
egyptian/: Randomizer.py  __init__.py  db.py  fuctions.py  generators.py
