[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egyptian"
version = "0.1.0"
description = "Generate Random Egyptian"
authors = [{ name = "Mahmoud Gamal", email = "mahmoudgshaker2018@gmail.com" }]
license = { text = "MIT" }
dependencies = []
